--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
 
                   <div class="section3">
                   <img class="photo1" src="images\pic.jpg" alt="">
-                  <p class="t1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam sunt vero minus tenetur, dignissimos maiores officia in sed? Voluptatum.  </p>
+                  <p class="t1">Eos numquam sunt vero minus tenetur, dignissimos maiores officia in sed? Voluptatum.  </p>
                   
                   <img class="photo1" src="images\pic.jpg" alt="">
-                  <p class="t1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam sunt vero minus tenetur, dignissimos maiores officia in sed? Voluptatum.  </p>
+                  <p class="t1">Eos numquam sunt vero minus tenetur, dignissimos maiores officia in sed? Voluptatum.  </p>
                  
                   <img class="photo1" src="images\pic.jpg" alt="">
-                  <p class="t1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam sunt vero minus tenetur, dignissimos maiores officia in sed? Voluptatum.  </p>
+                  <p class="t1"> Eos numquam sunt vero minus tenetur, dignissimos maiores officia in sed? Voluptatum.  </p>
 
 
                   <img class="photo1" src="images\pic.jpg" alt="">
-                  <p class="t2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam sunt vero minus tenetur, dignissimos maiores officia in sed? Voluptatum.  </p>
+                  <p class="t2"> Eos numquam sunt vero minus tenetur, dignissimos maiores officia in sed? Voluptatum.  </p>
                   <button id="picbtn">READ MORE</button>
 
                   </div>
